crates/sempai/src/tests/snapshots/sempai__tests__diagnostic_snapshot_tests__invalid_not_in_or.snap
---
source: crates/sempai/src/tests/diagnostic_snapshot_tests.rs
expression: redacted_report_json(&report)
---
{
  "diagnostics": [
    {
      "code": "E_SEMPAI_INVALID_NOT_IN_OR",
      "message": "negated terms are not allowed inside disjunction (Or/pattern-either)",
      "notes": [],
      "primary_span": "<redacted-span>"
    }
  ]
}
