crates/sempai/src/tests/snapshots/sempai__tests__diagnostic_snapshot_tests__missing_positive_term_in_and.snap
---
source: crates/sempai/src/tests/diagnostic_snapshot_tests.rs
expression: redacted_report_json(&report)
---
{
  "diagnostics": [
    {
      "code": "E_SEMPAI_MISSING_POSITIVE_TERM_IN_AND",
      "message": "conjunction (And/patterns) must contain at least one positive match term",
      "notes": [],
      "primary_span": {
        "end": 0,
        "start": 0,
        "uri": null
      }
    }
  ]
}
