crates/sempai/src/tests/snapshots/sempai__tests__diagnostic_snapshot_tests__schema_invalid_language.snap
---
source: crates/sempai/src/tests/diagnostic_snapshot_tests.rs
expression: diagnostic_report_json(&report)
---
{
  "diagnostics": [
    {
      "code": "E_SEMPAI_SCHEMA_INVALID",
      "message": "unsupported language 'cobol': unknown language: cobol",
      "primary_span": {
        "start": 0,
        "end": 1,
        "uri": null
      },
      "notes": []
    }
  ]
}
